[gd_scene load_steps=6 format=2]

[ext_resource path="res://Components/Projectiles/Instanceable/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Projectiles/Instanceable/Rocket.gd" type="Script" id=2]
[ext_resource path="res://Components/Projectiles/Resources/Bullet_Big.tres" type="Resource" id=3]
[ext_resource path="res://Components/Projectiles/SpriteFrames/BigFrames.tres" type="SpriteFrames" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[node name="Rocket" instance=ExtResource( 1 )]
script = ExtResource( 2 )
res = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
frames = ExtResource( 4 )

[node name="RocketArea" type="Area2D" parent="." index="2"]
position = Vector2( 7.875, 0 )
collision_layer = 8
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="RocketArea" index="0"]
shape = SubResource( 1 )
[connection signal="body_entered" from="RocketArea" to="." method="_on_RocketArea_body_entered"]
[connection signal="body_exited" from="RocketArea" to="." method="_on_RocketArea_body_exited"]
